--- a/calculator-self/index.html
+++ b/calculator-self/index.html
@@ -29,7 +29,7 @@
 <!-- 계산기 버튼 구현 -->
 <body>
   <input readonly id="operator" />
-  <input readonly type="number" id="result" />
+  <input readonly type="text" id="result" />
   <div class="row">
     <button id="num-7">7</button>
     <button id="num-8">8</button>
@@ -54,5 +54,5 @@
     <button id="calculate">=</button>
     <button id="multiply">x</button>
   </div>
-  <script src="./calculator.js"></script>
+  <script src="./index.js"></script>
 </body>
