--- a/word-relay-self/index.html
+++ b/word-relay-self/index.html
@@ -11,6 +11,6 @@
     <div>제시어: <span id="word"></span></div>
     <input type="text" name="" id="" />
     <button>입력</button>
-    <script src="word-relay-self.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
