--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             can be entered)</a
           >
         </li>
+        <li><a href="/number_baseball/">Number Baseball</a></li>
       </ul>
     </main>
   </body>
