number_baseball-self

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
             can be entered)</a
           >
         </li>
-        <li><a href="/number_baseball/">Number Baseball</a></li>
+        <li><a href="/number_baseball">Number Baseball</a></li>
+        <li>
+          <a href="/number_baseball-self"
+            >Number Baseball (Add Out and Count Limit)</a
+          >
+        </li>
       </ul>
     </main>
   </body>
