--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             >Number Baseball (Add Out and Count Limit)</a
           >
         </li>
+        <li><a href="/lotto/">Lotto</a></li>
       </ul>
     </main>
   </body>
