--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           >
         </li>
         <li><a href="/lotto/">Lotto</a></li>
+        <li><a href="/lotto-self/">Lotto(Color)</a></li>
       </ul>
     </main>
   </body>
