--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </li>
         <li><a href="/lotto/">Lotto</a></li>
         <li><a href="/lotto-self/">Lotto(Color)</a></li>
+        <li><a href="/rsp/">Rock Paper Scissors</a></li>
       </ul>
     </main>
   </body>
