--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="/lotto-self/">Lotto(Color)</a></li>
         <li><a href="/rsp/">Rock Paper Scissors</a></li>
         <li><a href="/rsp-self/">Rock Paper Scissors(Best of three)</a></li>
+        <li><a href="/response-check/">Response Check</a></li>
       </ul>
     </main>
   </body>
