--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <li><a href="/rsp/">Rock Paper Scissors</a></li>
         <li><a href="/rsp-self/">Rock Paper Scissors(Best of three)</a></li>
         <li><a href="/response-check/">Response Check</a></li>
+        <li>
+          <a href="/response-check-self/">Response Check(List of Top 5)</a>
+        </li>
       </ul>
     </main>
   </body>
