--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li>
           <a href="/response-check-self/">Response Check(List of Top 5)</a>
         </li>
+        <li><a href="/tictactoe/">Tic Tac Toe</a></li>
       </ul>
     </main>
   </body>
