--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <a href="/response-check-self/">Response Check(List of Top 5)</a>
         </li>
         <li><a href="/tictactoe/">Tic Tac Toe</a></li>
+        <li><a href="/tictactoe-self/">Tic Tac Toe(with computer)</a></li>
       </ul>
     </main>
   </body>
