--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </li>
         <li><a href="/tictactoe/">Tic Tac Toe</a></li>
         <li><a href="/tictactoe-self/">Tic Tac Toe(with computer)</a></li>
+        <li><a href="/text-rpg/">Text RPG</a></li>
       </ul>
     </main>
   </body>
