--- a/index.html
+++ b/index.html
@@ -13,34 +13,35 @@
     </header>
     <main>
       <ul>
-        <li><a href="/word-relay">Word Relay</a></li>
+        <li><a href="word-relay">Word Relay</a></li>
         <li>
-          <a href="/word-relay-self">Word Relay (Only 3 letter words)</a>
+          <a href="word-relay-self">Word Relay (Only 3 letter words)</a>
         </li>
-        <li><a href="/calculator">Calculator</a></li>
+        <li><a href="calculator">Calculator</a></li>
         <li>
-          <a href="/calculator-self"
+          <a href="calculator-self"
             >Calculator (Continuous calculation possible and Negative numbers
             can be entered)</a
           >
         </li>
-        <li><a href="/number_baseball">Number Baseball</a></li>
+        <li><a href="number_baseball">Number Baseball</a></li>
         <li>
-          <a href="/number_baseball-self"
+          <a href="number_baseball-self"
             >Number Baseball (Add Out and Count Limit)</a
           >
         </li>
-        <li><a href="/lotto/">Lotto</a></li>
-        <li><a href="/lotto-self/">Lotto(Color)</a></li>
-        <li><a href="/rsp/">Rock Paper Scissors</a></li>
-        <li><a href="/rsp-self/">Rock Paper Scissors(Best of three)</a></li>
-        <li><a href="/response-check/">Response Check</a></li>
+        <li><a href="lotto">Lotto</a></li>
+        <li><a href="lotto-self">Lotto(Color)</a></li>
+        <li><a href="rsp">Rock Paper Scissors</a></li>
+        <li><a href="rsp-self">Rock Paper Scissors(Best of three)</a></li>
+        <li><a href="response-check">Response Check</a></li>
         <li>
-          <a href="/response-check-self/">Response Check(List of Top 5)</a>
+          <a href="response-check-self">Response Check(List of Top 5)</a>
         </li>
-        <li><a href="/tictactoe/">Tic Tac Toe</a></li>
-        <li><a href="/tictactoe-self/">Tic Tac Toe(with computer)</a></li>
-        <li><a href="/text-rpg/">Text RPG</a></li>
+        <li><a href="tictactoe">Tic Tac Toe</a></li>
+        <li><a href="tictactoe-self">Tic Tac Toe(with computer)</a></li>
+        <li><a href="text-rpg">Text RPG</a></li>
+        <li><a href="concentration">Concentration</a></li>
       </ul>
     </main>
   </body>
