--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li><a href="tictactoe-self">Tic Tac Toe(with computer)</a></li>
         <li><a href="text-rpg">Text RPG</a></li>
         <li><a href="concentration">Concentration</a></li>
+        <li><a href="concentration-self">Concentration(Timer)</a></li>
       </ul>
     </main>
   </body>
