--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li><a href="text-rpg">Text RPG</a></li>
         <li><a href="concentration">Concentration</a></li>
         <li><a href="concentration-self">Concentration(Timer)</a></li>
+        <li><a href="mine-sweeper">Mine Sweeper</a></li>
       </ul>
     </main>
   </body>
