mine-sweeper-self

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <li><a href="concentration">Concentration</a></li>
         <li><a href="concentration-self">Concentration(Timer)</a></li>
         <li><a href="mine-sweeper">Mine Sweeper</a></li>
+        <li>
+          <a href="mine-sweeper-self">Mine Sweeper(No mines on first click)</a>
+        </li>
       </ul>
     </main>
   </body>
