--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li>
           <a href="mine-sweeper-self">Mine Sweeper(No mines on first click)</a>
         </li>
+        <li><a href="2048">2048</a></li>
       </ul>
     </main>
   </body>
