--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <a href="mine-sweeper-self">Mine Sweeper(No mines on first click)</a>
         </li>
         <li><a href="2048">2048</a></li>
+        <li><a href="2048-self">2048(Add revert button)</a></li>
       </ul>
     </main>
   </body>
