--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </li>
         <li><a href="2048">2048</a></li>
         <li><a href="2048-self">2048(Add revert button)</a></li>
+        <li><a href="whack-a-mole">Whack a Mole</a></li>
       </ul>
     </main>
   </body>
